--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,21 +13,21 @@
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/10/n13014000.md#1" title="【独家】法治还是人治？ 文件曝中共谎言""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/d4e742759c813c812429b1a57a9d8ee3-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13038130.md#1" title="旅美港人谈苹果日报事件 “昔日香港不再”""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/06/id13038169-PXL_20210612_235725324-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/twobjw383/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://twobjw383.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040545.md#1">深圳一住宅指导价13万拍出45万 引关注</a><br>
-:clock8: <em>50分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040635.md#1">消息：几家伊朗国家新闻网站域名被美没收</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040503.md#1">量子显微镜问世 可看到细胞上微小的结构</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040571.md#1">依赖中国疫苗的数个国家疫情严峻 警示世界</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040286.md#1">【新闻看点】胡锡进要退了 共和党促拜登查毒源</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040362.md#1">【横河观点】替中共解套 谁是“有用的白痴”？</a><br>
+:clock8: <em>3分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040717.md#1">奥运和20大来临 中共拟延长边境管控一年</a><br>
+:clock8: <em>4分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040404.md#1">陆女星陈好教授职称掀风波 校方紧急撤下头衔</a><br>
+:clock8: <em>5分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040796.md#1">加议员提“加台关系法案” 正视台湾民主政体</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040565.md#1">反对学校贴BLM海报 明尼苏达女孩网络爆红</a><br>
+:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/23/n13040704.md#1">立陶宛赠台疫苗 蔡英文以立陶宛语感谢</a><br>
+:clock8: <em>21分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13039345.md#1">业内人士爆料：中共经代理商购大量台积电芯片</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037328.md#1">董经纬叛逃？章家敦：若属实 中共或一夜变天</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037552.md#1">建党百年陷前所未有困境 中共还能撑多久</a><br>
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13036433.md#1">四川比特币矿场遭集体断电 “矿工”损失惨重</a><br>
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13036014.md#1">【翻墙必看】中共系列动作 证高官叛逃？</a><br>
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037571.md#1">陆大学生酷热中求装空调 当局严防校园风险</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037727.md#1">宁波黑人外教奸杀女生事件 胡锡进言论惹议</a><br>
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037608.md#1">王友群：三次叛逃对中共都似晴天霹雳</a><br>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13036433.md#1">四川比特币矿场遭集体断电 “矿工”损失惨重</a><br>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037571.md#1">陆大学生酷热中求装空调 当局严防校园风险</a><br>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13036014.md#1">【翻墙必看】中共系列动作 证高官叛逃？</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13038555.md#1">卸任驻美大使 崔天凯发辞别信称将回国</a><br>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037608.md#1">王友群：三次叛逃对中共都似晴天霹雳</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13036321.md#1">中共建党百周年临近 北京实施无线电管制</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037781.md#1">【新闻看点】炒顾顺章叛党 中共将对谁下手？</a><br>
 <br><p align="center"><a href="https://github.com/twobjw383/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
@@ -51,6 +51,7 @@
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/21/n13037691.md#1">【探索时分】暗剑无人机吓坏美军？吹15年无影</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040325.md#1">【秦鹏直播】崔天凯离职 石正丽伙伴被柳叶刀除名</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040286.md#1">【新闻看点】胡锡进要退了 共和党促拜登查毒源</a><br>
+<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040404.md#1">陆女星陈好教授职称掀风波 校方紧急撤下头衔</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040115.md#1">【首播】专访程晓农：中美前后30年互相否定</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040258.md#1">周星驰生日怎么过？田启文透露好友新动向</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/22/n13040043.md#1">家姐当年想当摄影记者 周润发送名贵器材力挺</a><br>
@@ -97,16 +98,15 @@
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/18/n13031093.md#1">【拍案惊奇】普京笑答中共武统 让北京失望了？</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/18/n13031730.md#1">【珍言真语】钱志健：袭苹果日报 毁港核心价值</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/18/n13031625.md#1">【一线采访】深圳机场人员确诊 下十围封村</a><br>
-<a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/18/n13031476.md#1">拜登联欧抗共会普京 分析：北京始料不及</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观 藏字石" alt="古今奇观 藏字石"><br>古今奇观 藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="中共的迫害与掩盖" alt="中共的迫害与掩盖"><br>中共的迫害与掩盖</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析中共造假" alt="剖析中共造假"><br>剖析中共造假</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证五月十三日" alt="见证五月十三日"><br>见证五月十三日</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://111.240.245.133/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,854</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://61.223.82.118/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 51,854</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 379,359,691 人
+!共 379,360,215 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037684-l3FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039101.md#1">女儿遭轮奸险被灭口8年不立案 母伸冤被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035936.md#1">无锡沈爱斌探访病友 遭警方拦截后失联</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/20/n13034908.md#1">拒接受港府不合理条件 台湾撤走驻港办人员</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2011/10/1110171252432320-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1">深圳一住宅指导价13万拍出45万 引关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039969.md#1">大陆假芯片横行 日趋严重 风险转嫁消费者</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039708.md#1">瑞典法院维持对华为5G网络设备的禁令</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038924.md#1">80元游戏卡 大陆拍出8700万天价</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038479.md#1">大陆虚拟货币挖矿时代终结 挖矿机价格减半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038065.md#1">猪价下跌致业界寒冬？基金调整猪企盈利预测</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040571.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13032823-GettyImages-1233194236-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040571.md#1">依赖中国疫苗的数个国家疫情严峻 警示世界</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040436.md#1">美第七舰队驱逐舰穿越台湾海峡 中共又气炸</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040255.md#1">美众院外委会主席：中共不是中国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039918.md#1">四十多国发声明关注新疆香港人权 中共跳脚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039802.md#1">曾被中共软禁美国球员：减重40磅 不知疫情</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/04/id12915526-WhatsApp-Image-2021-04-27-at-9.29.17-PM-320x200.jpeg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1">打疫苗抽奖送电动车 中共鼓励接种奇招百出</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039190.md#1">福建村民摆酒席时砖墙意外坠落 致9死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039025.md#1">水位上涨迅速 黑龙江呼玛县洪峰将至</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038792.md#1">重庆立海大厦负三楼爆炸 5人受伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038581.md#1">疫情持续 东莞关闭全市文娱体育场所等</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038298.md#1">河北张家口两次地震最高3.9级 北京有震感</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039983-GettyImages-1194364822-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039843.md#1">“躺平” T恤、手机壳及车贴等全线下架</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039747.md#1">宁波打桩机砸中轿车两死 死者传为名企老总</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038155.md#1">三退声明精选（2021/06/21）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037250.md#1">智能手表爆炸 福建一4岁女童被严重烧伤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13029638-deng-zhuoying-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13026757.md#1">数百中国学生学者疫情初期提前返美 遭美调查</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/12/n13018008.md#1">【财商天下】敏感期爆学潮 为生存讨说法</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13037684-l3FotoJet-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037607.md#1">“血艾”致二级残疾 江苏陆晓忠再被看管</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039101.md#1">女儿遭轮奸险被灭口8年不立案 母伸冤被刑拘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038297.md#1">关注中共对新疆香港迫害 联合国官员盼访新疆</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035705.md#1">吉林警察入室绑架访民 河北官员火车站打人</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13035936.md#1">无锡沈爱斌探访病友 遭警方拦截后失联</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/20/n13034908.md#1">拒接受港府不合理条件 台湾撤走驻港办人员</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2011/10/1110171252432320-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040545.md#1">深圳一住宅指导价13万拍出45万 引关注</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039969.md#1">大陆假芯片横行 日趋严重 风险转嫁消费者</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039708.md#1">瑞典法院维持对华为5G网络设备的禁令</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038924.md#1">80元游戏卡 大陆拍出8700万天价</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038479.md#1">大陆虚拟货币挖矿时代终结 挖矿机价格减半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038065.md#1">猪价下跌致业界寒冬？基金调整猪企盈利预测</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13040829-2106222354552378-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040704.md#1">立陶宛赠台疫苗 蔡英文以立陶宛语感谢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040571.md#1">依赖中国疫苗的数个国家疫情严峻 警示世界</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/23/n13040436.md#1">美第七舰队驱逐舰穿越台湾海峡 中共又气炸</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13040255.md#1">美众院外委会主席：中共不是中国</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039918.md#1">四十多国发声明关注新疆香港人权 中共跳脚</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039802.md#1">曾被中共软禁美国球员：减重40磅 不知疫情</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039748-dcd939c59cc8ac363213cfe607cf7db8-320x200.png"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039743.md#1">中国多地暴雨频发 黑龙江现50年一遇洪水</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039352.md#1">打疫苗抽奖送电动车 中共鼓励接种奇招百出</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039190.md#1">福建村民摆酒席时砖墙意外坠落 致9死7伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039025.md#1">水位上涨迅速 黑龙江呼玛县洪峰将至</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038792.md#1">重庆立海大厦负三楼爆炸 5人受伤</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038581.md#1">疫情持续 东莞关闭全市文娱体育场所等</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039983-GettyImages-1194364822-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039971.md#1">孙杨8年禁赛减为4年3个月 将无缘东京奥运</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039843.md#1">“躺平” T恤、手机壳及车贴等全线下架</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039747.md#1">宁波打桩机砸中轿车两死 死者传为名企老总</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13038155.md#1">三退声明精选（2021/06/21）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037294.md#1">电信诈骗侵袭大陆校园 一年卷走学生数十亿</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/21/n13037250.md#1">智能手表爆炸 福建一4岁女童被严重烧伤</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/06/id13039721-000_98G3TW-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/22/n13039676.md#1">中共阻调查武毒所 卢比奥提法案制裁中科院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029496.md#1">双料港姐邓卓殷完成建筑专业硕士课程</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13029029.md#1">【财商天下】土猪拱白菜 励志还是可怕？</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/17/n13028061.md#1">大陆翻译家许渊冲去世 终年100岁</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13027003.md#1">吴尊爸爸75岁生日 冻龄外表与儿子像兄弟</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/6/16/n13026757.md#1">数百中国学生学者疫情初期提前返美 遭美调查</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/twobjw383/djy/blob/master/gb/21/5/4/n12924622.md#1">【独家】起底中共高层力捧的广西柳工</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/6/1/n12990081.md#1">【独家】维也纳孔子学院成中共渗透桥头堡</a><br>
 <a href="https://github.com/twobjw383/djy/blob/master/gb/21/5/14/n12947914.md#1">【独家】文件泄华大游说河北推优生政策</a><br>
